# 12_form_report

./: docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/models/: f3_response.py
backend/src/routes/: __init__.py  f2_route.py  f3_route.py  f9_route.py  report_f02.py
backend/src/services/: __init__.py  f02.py  f2_service.py  f3_service.py  service_f2.py
backend/src/utils/: __init__.py  get_closing_balance.py  read_file.py  response_message.py
frontend/: Dockerfile  bun.lockb  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  routeTree.gen.ts
frontend/src/components/: DownloadButton.tsx  ImportButton.tsx  ReportHeader.tsx
frontend/src/components/ui/: table.tsx
frontend/src/lib/: exportFile.ts  flattenData.ts  formatNumberWithComma.ts  formatNumberWithCommas.ts  getReportData.ts
frontend/src/routes/: __root.tsx  f2.tsx  f3.tsx  f9.tsx  index.tsx
